<?xml version="1.0"?>
<package format="2">
    <name>trajectory_generator</name>
    <version>0.0.0</version>
    <description>The trajectory_generator package</description>

    <maintainer email="zhangzhimeng@turingnideo.net">meng</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>nav_msgs</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>

    <export>

    </export>
</package>
